gitops/01-system/main/vault/manifests/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vault-route
  namespace: vault
spec:
  parentRefs:
  - name: management-gateway
    namespace: istio-system
  hostnames:
  - "vault.jin-server.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: vault
      namespace: vault
      port: 8200
